--- a/styles/contents.css
+++ b/styles/contents.css
@@ -19,7 +19,7 @@
 }
 
 .table-of-contents li a {
-    color: white; 
+    color: #CCCCCC; 
     text-decoration: none;
 }
 
